--- a/ProjetCovoiturage/ProjetCovoiturage/Resources/Models/Trajet.fr.resx
+++ b/ProjetCovoiturage/ProjetCovoiturage/Resources/Models/Trajet.fr.resx
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="HeurArrive" xml:space="preserve">
+  <data name="HeureArrive" xml:space="preserve">
     <value>Heur d'arrivée</value>
   </data>
-  <data name="HeurArriveError" xml:space="preserve">
+  <data name="HeureArriveError" xml:space="preserve">
     <value>L'heur d'arrivée  est requis</value>
   </data>
-  <data name="HeurDepart" xml:space="preserve">
+  <data name="HeureDepart" xml:space="preserve">
     <value>Heur d'départ</value>
   </data>
-  <data name="HeurDepartError" xml:space="preserve">
+  <data name="HeureDepartError" xml:space="preserve">
     <value>L'heure de depart  est requis</value>
   </data>
   <data name="idTrajet" xml:space="preserve">
