--- a/ProjetCovoiturage/ProjetCovoiturage/Resources/Views/Home.resx
+++ b/ProjetCovoiturage/ProjetCovoiturage/Resources/Views/Home.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value>Use this area to provide additional information.</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</value>
+  </data>
+  <data name="DescriptionLibrarie" xml:space="preserve">
+    <value>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</value>
   </data>
   <data name="HomeTitle" xml:space="preserve">
     <value>ASP.NET</value>
@@ -126,7 +132,24 @@
   <data name="More" xml:space="preserve">
     <value>Learn more</value>
   </data>
+  <data name="MoreDescription" xml:space="preserve">
+    <value>ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+            enables a clean separation of concerns and gives you full control over markup
+            for enjoyable, agile development.</value>
+  </data>
+  <data name="MoreLibrarie" xml:space="preserve">
+    <value>Get more libraries</value>
+  </data>
+  <data name="Start" xml:space="preserve">
+    <value>Getting started</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Home Page</value>
+  </data>
+  <data name="WebDescription" xml:space="preserve">
+    <value>You can easily find a web hosting company that offers the right mix of features and price for your applications.</value>
+  </data>
+  <data name="WebHosting" xml:space="preserve">
+    <value>Web Hosting</value>
   </data>
 </root>
